--- a/styles/components.css
+++ b/styles/components.css
@@ -162,8 +162,9 @@
         .hidden-input {
             opacity: 0;
             position: fixed;
-            top: -100px;
-            left: -100px;
+            top: 50vh;
+            left: 50vw;
+            transform: translate(-50%, -50%);
             width: 1px;
             height: 1px;
             z-index: -1;
